# dprod

./: .gitignore  AI_AGENT_README.md  DEPLOYMENT.md  DOCS.md  Dockerfile  Makefile  OMNICORE_INTEGRATION.md  Omnicoreagent.md  QUICKSTART.md  README.md  alembic.ini  appspec.yml  docker-compose.prod.yml  docker-compose.yml  docker.md  env.example  env.template  package-lock.json  package.json  pyproject.toml  run.sh
.github/workflows/: deploy-fargate.yml  deploy-workers.yml  deploy.yml  staging-migrations.yml
alembic/: env.py
alembic/versions/: 076ae3b5902b_add_ai_agent_infrastructure.py  20251029_0001_initial.py  20251103_0001_add_password_hash.py
demo/: package-lock.json  package.json
deploy/: deploy.sh
docs/: OMNICORE.md  PRD.md  command-building.md  plan.md  project.md
examples/nodejs/: index.js  package.json
examples/python/: app.py
examples/static/: index.html
infrastructure/: env.production.template
infrastructure/docker/: Dockerfile.api  Dockerfile.detection  Dockerfile.orchestrator
infrastructure/fluent-bit/: fluent-bit.conf
infrastructure/nginx/: nginx.conf
infrastructure/nginx/conf.d/: dprod.conf  locations.conf
infrastructure/terraform/: backend.tf  codedeploy.tf  ecs-policy.json  ecs-simple.tf  ecs.tf.backup  iam.tf  main.tf  tfplan  user_data.sh  variables.tf
infrastructure/traefik/: dynamic.yml  traefik.yml
scripts/: after_install.sh  application_start.sh  application_stop.sh  before_install.sh  build-and-push-ecr.sh  deploy-to-aws.sh  deploy.sh  fix-imports.py  install_omnicore.sh  setup-aws.sh  setup-dev.sh  start-dev.sh  test-deployment.py  test-structure.py  test_ai_agent.py  test_ai_integration.py  test_deployment_flow.py  test_omnicore_integration.py
services/ai/core/: __init__.py  ai_logger.py  background_agent_service.py  omnicore_service.py  project_analyzer_agent.py  project_analyzer_tools.py  ┌───────────────────────────────────────
services/api/: Dockerfile  pyproject.toml
services/api/core/: __init__.py  main.py
services/api/core/db/: database.py
services/api/core/utils/: config.py
services/api/core/v1/: api_router.py
services/api/core/v1/auth/: dependencies.py  jwt_handler.py  password_handler.py
services/api/core/v1/routes/: ai.py  auth.py  deployments.py  omniagent.py  projects.py
services/api/core/v1/schemas/: __init__.py  ai_schema.py  auth_schema.py
services/api/core/v1/services/: __init__.py  ai_service.py  auth_service.py  deployment_service.py
services/detector/core/: __init__.py  ai_detector.py  detector.py
services/detector/core/detectors/: __init__.py  base.py  generic.py  go.py  nodejs.py  python.py  static.py
services/orchestrator/: pyproject.toml
services/orchestrator/core/: __init__.py  deployment_manager.py  docker_manager.py  sqs_deployment_manager.py
services/shared/core/: __init__.py  constants.py  exceptions.py  models.py  schemas.py
services/worker/: Dockerfile  requirements.txt
services/worker/core/: __init__.py  config.py  docker_executor.py  main.py  sqs_poller.py  status_updater.py
tools/cli/: Dockerfile  cli.sh  package.json
tools/cli/src/: index.js
tools/cli/src/commands/: deploy.js  login.js  logs.js  register.js  status.js
tools/frontend/: Dockerfile
