[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dprod-orchestrator"
version = "0.1.0"
description = "Docker orchestration service for Dprod"
authors = ["Dprod Team <team@dprod.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.3"
asyncio = "^3.4.3"
aiofiles = "^23.2.1"
dprod-shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
